# deno-silicon

./: .gitignore  Cargo.toml  Makefile  README.md  deps.ts  deps_deprecated.ts  deps_test.ts  mod.ts  mod_test.ts  silicon.ts  silicon_deprecated.ts  silicon_test.ts
.github/workflows/: ci.yaml  release.yaml
bindings/: bindings.ts
example/: main.ts
src/: lib.rs
